# taurak

./: .gitignore  Cargo.toml  LICENSE  README.md  start.sh  taurak.service
icon/: dark_empty.xcf  icon.xcf  light_empty.xcf
src/: checks.rs  chess_game.rs  commands.rs  main.rs
