[package]
name = "taurak"
version = "0.1.0"
authors = ["TecTrixer <tonihoevedes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"