[package]
name = "taurak"
version = "1.1.1"
authors = ["TecTrixer <tonihoevedes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"
censor = "0.2"
reqwest = "0.11"
serde_json = "1.0"